[package]
name = "genesis-plus-rs"
version = "0.1.0"
edition = "2021"
authors = ["Leostrife"]
description = "A highly accurate and performant Sega 8/16-bit emulator core in Rust"
license = "Non-commercial" # *Verifique a licença do código original*
readme = "README.md"

# O core deve ser compilado como uma biblioteca dinâmica (cdylib) para o RetroArch.
[lib]
name = "genesis_plus_rs"
crate-type = ["cdylib"]

# Recursos (features) para ativar otimizações específicas.
[features]
default = []
simd = []           # Ativa otimizações SIMD (SSE4.1, AVX2)
avx512 = []         # Para CPUs com AVX-512 (experimental)
gpu-compute = []    # Ativa computação na GPU via wgpu (futuro)
jit = []            # Ativa compilação JIT para CPUs (futuro, usando cranelift)

# Dependências principais
[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "2.10.0"
bytemuck = { version = "1.14", features = ["derive"] }
num-traits = "0.2"
libc = "0.2" # Para interface C no libretro

# Dependências para otimização (condicionais)
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = { version = "11.6.0", optional = true } # Para detecção de CPU

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# wgpu = { version = "0.18", optional = true } # Para GPU compute (descomente no futuro)
# cranelift = { version = "0.100", optional = true } # Para JIT (descomente no futuro)

# Configurações de build otimizadas para release
[profile.release]
codegen-units = 1   # Melhor otimização, compilação mais lenta
lto = "thin"        # Otimização de Link-Time
opt-level = 3
panic = "abort"     # Remove overhead de desenrolamento de stack